# ajora

./: LICENSE  README.md  docker-compose.yml  generate_ajora.sh
contracts/: AjoraPool.sol
deployments/helm/ajora/: values.yaml
deployments/k8s/: auth-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml
deployments/security/: constraints.yaml
docs/: document.md
helm/: values.yaml
infrastructure/: main.tf
infrastructure/terraform/: main.tf
kubernetes/manifests/: namespaces.yaml
migrations/: 001_initial_schema.sql
scripts/: build-all.sh  run-all.sh  setup-dev.sh
services/api-gateway/: go.mod  main.go
services/auth-service/: Dockerfile  go.mod  main.go
services/auth-service/internal/auth/: service.go
services/auth-service/internal/config/: config.go
services/auth-service/internal/db/: postgres.go  redis.go
services/auth-service/internal/handlers/: auth.go
services/auth-service/internal/middleware/: auth.go  logging.go
services/auth-service/internal/models/: user.go
services/auth-service/internal/service/: auth_service.go
services/pool-service/: go.mod  main.go
services/user-service/: go.mod  main.go
services/wallet-signer/: Cargo.toml  Dockerfile
services/wallet-signer/src/: config.rs  error.rs  main.rs  signer.rs  types.rs
