
[package]
name = "wallet-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
secp256k1 = { version = "0.27", features = ["rand"] }
hex = "0.4"
aws-sdk-kms = "0.28"
aws-config = "0.55"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"

