
[package]
name = "wallet-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
secp256k1 = { version = "0.27", features = ["rand", "global-context"] }
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
aws-sdk-kms = "0.28"
aws-config = "0.55"
aws-smithy-http = "0.55"
dotenvy = "0.15"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "signature_bench"
harness = false

